Css header white space fix (#51)
* Added directive to dynamically change mainSearchBox height.  Modified CSS to fix issues in the mainSearchBox

* modify header css to remove white spaces

* removed erroneous 'n' from css, update header height for specail widths, and added explanatory constant to directive

* Changed to using the window object to get the height vs the body

--- a/app/styles/_constants.scss
+++ b/app/styles/_constants.scss
@@ -3,5 +3,3 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
 
 $headerPageMargin: 1.5rem;
 $subPageMargin: 1.5rem;
-
-$navbar-height:95px;
